# BacktestingReport1

./: .gitignore  BacktestsReport.ipynb  BacktestsReport2.ipynb  EvolutionaryBacktesting.ipynb  README.md  pyproject.toml  requirements.txt
Backtest/: MeanReversionAnalysis.py  MomentumAnalysis.py
Backtest/controllers/: Analysis.py  Coinglass.py  MeanReversionAnalysis.py  MomentumAnalysis.py  PairTradeAnalysis.py  test_PairTradeAnalysis.py
Backtest/models/: Analysis.py  BaseAnalysis.py  CoinGlassData.py  EvolutionaryModel.py  LocalDataStorage.py  MeanReversionAnalysis.py  MomentumAnalysis.py  PairTradeAnalysis.py  VBTYFData.py  test_EvolutionaryModel.py  test_PairTradeAnalysis.py
