[tool.poetry]
name = "backtester"
version = "0.1.0"
description = "Python code for backtesting financial strategies."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
vectorbt = "^0.26.2"
jupyter = "^1.0.0"
yfinance = "^0.2.41"
lxml = "^5.3.0"
pandas = "^2.2.2"
pytest = "^8.3.2"
plotly = "^5.23.0"
scipy = "^1.14.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
